# Traffic-Sign-CNN-Pytorch

./: Dockerfile  README.md  pyproject.toml
manifests/: deployment.yaml  service.yaml
model/: traffic_sign_efficientnet_b0.onnx
notebook/: traffic_sign.ipynb
src/: app.py  test_local.py  train.py
